@@ -847,7 +847,7 @@ ENDIF(BUILD_WITH_LEVELDB)
 IF(BUILD_WITH_ROCKSDB)
   FIND_LIBRARY(ROCKSDB_LIBRARY rocksdb)
   FIND_PATH(ROCKSDB_INCLUDE_DIR NAMES rocksdb/db.h PATH_SUFFIXES include)
-  SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${ROCKSDB_INCLUDE_DIR})
+  SET(INCLUDE_DIRS ${INCLUDE_DIRS} ${ROCKSDB_INCLUDE_DIR} ${LZ4_INCLUDE_DIRS})
 
   #core
   SET(HEADERS_CORE_DB_ROCKSDB
@@ -903,7 +903,7 @@ IF(BUILD_WITH_ROCKSDB)
   SET(HEADERS_GUI_TO_MOC ${HEADERS_GUI_TO_MOC} ${HEADERS_ROCKSDB_GUI_TO_MOC})
   SET(HEADERS_GUI ${HEADERS_GUI} ${HEADERS_ROCKSDB_GUI})
   SET(SOURCES_GUI ${SOURCES_GUI} ${SOURCES_ROCKSDB_GUI})
-  SET(DB_LIBS ${DB_LIBS} ${ROCKSDB_LIBRARY} ${BZIP2_LIBRARIES} ${SNAPPY_LIBRARIES})
+  SET(DB_LIBS ${DB_LIBS} ${ROCKSDB_LIBRARY} ${BZIP2_LIBRARIES} ${LZ4_LIBRARIES} ${ZLIB_LIBRARY} ${SNAPPY_LIBRARIES})
 ENDIF(BUILD_WITH_ROCKSDB)
 
 #unqlite
@@ -1311,6 +1311,11 @@ IF(OS_WINDOWS)
   SET(SHARED_ZLIB_NAMES zlib1.dll z.dll zlib.dll zdll.dll zlibd.dll zlibd1.dll)
   FIND_RUNTIME_LIBRARY(SHARED_ZLIB_LIBRARY SHARED_ZLIB_NAMES)
   INSTALL(FILES ${SHARED_ZLIB_LIBRARY} DESTINATION ${LIB_INSTALL_DESTINATION} COMPONENT RUNTIME)
+
+  #find runtime lz4
+  SET(SHARED_LZ4_NAMES liblz4.dll)
+  FIND_RUNTIME_LIBRARY(SHARED_LZ4_LIBRARY SHARED_LZ4_NAMES)
+  INSTALL(FILES ${SHARED_LZ4_LIBRARY} DESTINATION ${LIB_INSTALL_DESTINATION} COMPONENT RUNTIME)
 
   IF(USE_SASL2)
     #find runtime msys
